tests/baselines/reference/defaultExportsCannotMerge03(target=es2015).errors.txt
m1.ts(1,22): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
m1.ts(4,11): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
m2.ts(1,20): error TS2307: Cannot find module 'm1' or its corresponding type declarations.


==== m1.ts (2 errors) ====
    export default class Decl {
                         ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
    }
    
    interface Decl {
              ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
        p1: number;
        p2: number;
    }
    
    namespace Decl {
        interface I {
        }
    }
    
==== m2.ts (1 errors) ====
    import Entity from "m1"
                       ~~~~
!!! error TS2307: Cannot find module 'm1' or its corresponding type declarations.
    
    Entity();
    
    var x: Entity;
    var y: Entity.I;
    var z = new Entity();
    var sum = z.p1 + z.p2